--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.screenshotmaker">
+package="com.example.screenshotmaker">
    
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>ion.INTERNET"/>
    
    <application
-        android:label="ABOX"
+        android:label="ChatGT"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
