--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^8.0.9
   google_mobile_ads: ^2.2.0
   google_nav_bar: ^5.0.6
+  image_editor_plus: ^0.2.0
   image_picker: ^0.8.5
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
