--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  file_picker: ^4.5.1
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
   flutter_image_compress: ^1.1.3
   flutter_svg: ^2.0.5
   fluttertoast: ^8.0.9
-  google_mobile_ads: ^2.2.0
-  google_nav_bar: ^5.0.6
+  google_mobile_ads: ^3.0.0
   image_editor_plus: ^0.2.0
-  image_picker: ^0.8.5
+  image_picker: ^0.8.7+3
   path_provider: ^2.0.9
-  permission_handler: ^9.2.0
+  permission_handler: ^10.2.0
   provider: ^6.0.4
   screenshot: ^1.2.3
-  share_plus: ^4.0.4
+  share_plus: ^4.5.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -76,6 +74,7 @@ flutter:
     - family: PlusJakartaSans
       fonts:
         - asset: assets/fonts/PlusJakartaSans-Regular.ttf
+        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
         - asset: assets/fonts/PlusJakartaSans-Italic.ttf
           style: italic
     # - family: RobotoMono
