--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+3
+version: 1.0.1+4
 
 environment:
   sdk: ">=2.17.0-266.1.beta <3.0.0"
@@ -36,6 +36,7 @@ dependencies:
   fluttertoast: ^8.0.9
   google_mobile_ads: ^3.0.0
   image_editor_plus: ^0.2.0
+  image_gallery_saver: ^1.7.1
   image_picker: ^0.8.7+3
   path_provider: ^2.0.9
   permission_handler: ^10.2.0
@@ -74,7 +75,6 @@ flutter:
     - family: PlusJakartaSans
       fonts:
         - asset: assets/fonts/PlusJakartaSans-Regular.ttf
-        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
         - asset: assets/fonts/PlusJakartaSans-Italic.ttf
           style: italic
     # - family: RobotoMono
